Update Scraping researchgate data .ipynb

--- a/Scraping researchgate data .ipynb
+++ b/Scraping researchgate data .ipynb
@@ -50,13 +50,12 @@
    ],
    "source": [
     "#ralihussien@stu.kau.edu.sa , aalowais0004@stu.kau.edu.sa , mhussien0001@stu.kau.edu.sa\n",
-    "#pass123456\n",
     "\n",
     "driver =webdriver.Chrome(ChromeDriverManager().install())\n",
     "driver.get('https://www.researchgate.net/login')\n",
     "\n",
     "def fb_login():\n",
-    "    user,psw=  'aalowais0004@stu.kau.edu.sa','pass123456' \n",
+    "    user,psw=  '#','#' \n",
     "    driver.get ('https://www.researchgate.net/login')\n",
     "    driver.find_element_by_id('input-login').send_keys(user)\n",
     "    driver.find_element_by_id('input-password').send_keys(psw)\n",
